--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <div class="row">
-      <h1 class="h1">koukou</h1>
+      <h1 class="h1">TeSt</h1>
     </div>
     <div class="row">
       <div>
